--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
-  "name": "zhieq/laravel-api-signature-middleware",
-  "description": "zhieq group laravel api signature middleware",
+  "name": "zbxin/laravel-api-signature-middleware",
+  "description": "laravel api signature middleware",
   "type": "library",
   "license": "MIT",
   "authors": [
     {
-      "name": "zhieq",
-      "email": "developer@zhieq.com"
+      "name": "zbxin",
+      "email": "zbx@zbxin.com"
     }
   ],
   "require": {
     "laravel/framework": "*",
-    "zhieq/laravel-contracts": "^1.0",
-    "guzzlehttp/guzzle": "^6.3",
-    "zhieq/laravel-supports": "^1.0"
+    "zbxin/laravel-contracts": "^1.0",
+    "guzzlehttp/guzzle": "^7.0",
+    "zbxin/laravel-supports": "^1.0"
   },
   "autoload": {
     "psr-4": {
-      "ZhiEq\\ApiSignature\\": "src"
+      "zbxin\\ApiSignature\\": "src"
     }
   }
 }
